--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,9 @@
     "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
-    "html5-boilerplate": "~5.2.0"
+    "html5-boilerplate": "~5.2.0",
+    "bootstrap": "~3.1.1",
+    "jquery": "2.1.1",
+    "angular-moment": "~0.10.3"
   }
 }
