--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "html5-boilerplate": "~5.2.0",
     "bootstrap": "~3.1.1",
     "jquery": "2.1.1",
-    "angular-moment": "~0.10.3"
+    "angular-moment": "~0.10.3",
+    "angular-resource": "1.4.x",
+    "angular-local-storage": "~0.2.2"
   }
 }
