--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "jquery": "2.1.1",
     "angular-moment": "~0.10.3",
     "angular-resource": "1.4.x",
-    "angular-local-storage": "~0.2.2"
+    "angular-local-storage": "~0.2.2",
+    "ngSmoothScroll": "~1.7.1"
   }
 }
