--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "angular-moment": "~0.10.3",
     "angular-resource": "1.4.x",
     "angular-local-storage": "~0.2.2",
-    "ngSmoothScroll": "~1.7.1"
+    "ngSmoothScroll": "~1.7.1",
+    "ngFitText": "~3.3.3"
   }
 }
